--- a/BabelRefresher/babel.cfg
+++ b/BabelRefresher/babel.cfg
@@ -2,4 +2,5 @@
 [ignore: .idea/**]
 [python:  **.py]
 [jinja2: **/templates/**.html]
+encoding=utf-8
 extension=jinja2.ext.autoescape,jinja2.ext.with_
